<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mercury_a1</name>
  <version>0.0.1</version>
  <description>The mercury_a1 package</description>
  <maintainer email="u2@todo.todo">u2</maintainer>
  <license>BSD</license>

  <build_depend>rclpy</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>mycobot_communication</build_depend>
  <build_depend>mycobot_description</build_depend>


  <build_export_depend>mycobot_communication</build_export_depend>
  <build_export_depend>mycobot_description</build_export_depend>
  <build_export_depend>mycobot_interfaces</build_export_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>join_state_publisher</exec_depend>
  <exec_depend>join_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>python-tk</exec_depend>
  <exec_depend>mycobot_description</exec_depend>
  <exec_depend>mycobot_communication</exec_depend>
  <exec_depend>mycobot_interfaces</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
